# clausewise

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docker/: compose.yml
docs/: architecture.md  data_profile.md
docs/adr/: 0001-architecture-and-stack.md  0002-ports-and-provider-abstraction.md  0003-chunking-strategy.md  0004-embeddings-and-vector-index.md  0005-hybrid-retrieval.md  template.md
migrations/: env.py
migrations/versions/: 0001_enable_pgvector.py  0002_contracts_and_chunks.py  0003_chunk_embeddings.py  0004_keyword_search.py
scripts/: chunk_report.py  debug_parse.py  download_cuad.py  embed.py  ingest.py  parse_report.py  profile_cuad.py  query.py
src/clausewise/: __init__.py  config.py
src/clausewise/adapters/: __init__.py
src/clausewise/adapters/db/: __init__.py  async_engine.py  engine.py  models.py
src/clausewise/adapters/embeddings/: __init__.py  sentence_transformer.py
src/clausewise/adapters/pgvector/: __init__.py  keyword.py  store.py
src/clausewise/domain/: __init__.py  documents.py  errors.py  generation.py  retrieval.py
src/clausewise/ingestion/: __init__.py  cuad.py  dedup.py  enrich.py  parser.py  pipeline.py
src/clausewise/ingestion/chunkers/: __init__.py  clause_aware.py  common.py  fixed_size.py
src/clausewise/observability/: __init__.py  logging.py
src/clausewise/ports/: __init__.py  chunker.py  embeddings.py  keyword_index.py  llm.py  reranker.py  vector_store.py
src/clausewise/retrieval/: __init__.py  fusion.py  service.py
tests/: fakes.py
tests/integration/: test_database.py  test_ingest.py  test_keyword_index.py  test_vector_store.py
tests/unit/: test_chunkers.py  test_config.py  test_cuad.py  test_dedup.py  test_domain.py  test_enrich.py  test_fusion.py  test_logging.py  test_parser.py  test_ports_contracts.py  test_retrieval_service.py  test_smoke.py
